crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__questing_beast_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "Unimplemented",
          "name": "unknown",
          "description": "Vigilance, deathtouch, haste"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Vigilance, deathtouch, haste",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "AddRestriction",
          "restriction": {
            "type": "DamagePreventionDisabled",
            "source": 0,
            "expiry": {
              "type": "EndOfTurn"
            },
            "scope": {
              "type": "SourcesControlledBy",
              "data": 0
            }
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredTrigger": {
        "mode": "DamageDone",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "DealDamage",
            "amount": {
              "type": "Ref",
              "qty": {
                "type": "EventContextAmount"
              }
            },
            "target": {
              "type": "Typed",
              "type_filters": [
                "Planeswalker"
              ],
              "controller": "You",
              "properties": []
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "valid_card": null,
        "origin": null,
        "destination": null,
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": null,
        "optional": false,
        "damage_kind": "CombatOnly",
        "secondary": false,
        "valid_target": {
          "type": "Typed",
          "type_filters": [],
          "controller": "Opponent",
          "properties": []
        },
        "valid_source": {
          "type": "SelfRef"
        },
        "description": "Whenever ~ deals combat damage to an opponent, it deals that much damage to target planeswalker that player controls.",
        "constraint": null,
        "condition": null,
        "batched": false
      }
    },
    {
      "PreLoweredStatic": {
        "mode": {
          "CantBeBlockedBy": {
            "filter": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "PowerLE",
                  "value": {
                    "type": "Fixed",
                    "value": 2
                  }
                }
              ]
            }
          }
        },
        "affected": {
          "type": "SelfRef"
        },
        "modifications": [],
        "condition": null,
        "affected_zone": null,
        "effect_zone": null,
        "active_zones": [],
        "characteristic_defining": false,
        "description": "~ can't be blocked by creatures with power 2 or less."
      }
    }
  ],
  "source_text": "Vigilance, deathtouch, haste\nQuesting Beast can't be blocked by creatures with power 2 or less.\nCombat damage that would be dealt by creatures you control can't be prevented.\nWhenever Questing Beast deals combat damage to an opponent, it deals that much damage to target planeswalker that player controls.",
  "card_name": "Questing Beast"
}
