crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__savage_summoning_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredStatic": {
        "mode": "CantBeCountered",
        "affected": {
          "type": "SelfRef"
        },
        "modifications": [],
        "condition": null,
        "affected_zone": null,
        "effect_zone": null,
        "active_zones": [],
        "characteristic_defining": false,
        "description": "This spell can't be countered."
      }
    },
    {
      "PreLoweredReplacement": {
        "event": "Moved",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "PutCounter",
            "counter_type": "P1P1",
            "count": {
              "type": "Fixed",
              "value": 1
            },
            "target": {
              "type": "SelfRef"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "mode": {
          "type": "Mandatory"
        },
        "valid_card": {
          "type": "SelfRef"
        },
        "description": "The next creature spell you cast this turn can be cast as though it had flash. That spell can't be countered. That creature enters with an additional +1/+1 counter on it.",
        "condition": null
      }
    }
  ],
  "source_text": "This spell can't be countered.\nThe next creature spell you cast this turn can be cast as though it had flash. That spell can't be countered. That creature enters with an additional +1/+1 counter on it.",
  "card_name": "Savage Summoning"
}
