crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__short_sword_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Activated",
        "effect": {
          "type": "Attach",
          "target": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": "You",
            "properties": []
          }
        },
        "cost": {
          "type": "Mana",
          "cost": {
            "type": "Cost",
            "shards": [],
            "generic": 1
          }
        },
        "sub_ability": null,
        "duration": null,
        "description": "Equip {1}",
        "target_prompt": null,
        "sorcery_speed": true,
        "activation_restrictions": [
          {
            "type": "AsSorcery"
          }
        ],
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredStatic": {
        "mode": "Continuous",
        "affected": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": [
            {
              "type": "EquippedBy"
            }
          ]
        },
        "modifications": [
          {
            "type": "AddPower",
            "value": 1
          },
          {
            "type": "AddToughness",
            "value": 1
          }
        ],
        "condition": null,
        "affected_zone": null,
        "effect_zone": null,
        "active_zones": [],
        "characteristic_defining": false,
        "description": "Equipped creature gets +1/+1."
      }
    }
  ],
  "source_text": "Equipped creature gets +1/+1.\nEquip {1} ({1}: Attach to target creature you control. Equip only as a sorcery.)",
  "card_name": "Short Sword"
}
